# elevator-system

./: .dockerignore  .gitignore  .worktreeinclude  CHANGELOG.md  CLAUDE.md  DOC.md  README.md  demo.md  docker-compose.demo.yml  pom.xml  release-please-config.json  skaffold.yaml
.github/workflows/: apt-repo.yml  cd.yml  ci.yml  cli-console-release.yml  console-release.yml  elevator-console-cli-release.yml  pr-title.yml  release.yml
apt/: InRelease  Packages  Release  Release.gpg  elevator-console-cli_0.3.0-1_amd64.deb  elevator-console-cli_0.6.0-1_amd64.deb  elevator-console-cli_0.7.0-1_amd64.deb  elevator-console-cli_0.7.1-1_amd64.deb  elevator-console.gpg
charts/elevator/: Chart.yaml  values-dev.yaml  values.yaml
charts/elevator/charts/bi/: Chart.yaml  values.yaml
charts/elevator/charts/bi/templates/: jobs.yaml  network-policies.yaml  stats.yaml
charts/elevator/charts/console-web/: Chart.yaml  values.yaml
charts/elevator/charts/console-web/templates/: console-web.yaml
charts/elevator/charts/seed/: Chart.yaml  values.yaml
charts/elevator/templates/: _helpers.tpl  api.yaml  app.yaml  bi-jobs.yaml  bi-stats.yaml  configmap.yaml  console-web.yaml  kafka.yaml  network-policies.yaml  postgres-init.yaml  postgres.yaml  rbac.yaml  secret.yaml  seed-job.yaml
cli-console/: Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  install.sh  pom.xml
cli-console/src/: main.rs  sender.rs
cli-console/src/monitor/: app.rs
db/init/: 01-pekko-r2dbc.sql  02-elevator-read-model.sql  03-order-status.sql  04-processed-calls.sql  04-processed-orders.sql  05-call-status.sql  05-elevator-mileage.sql  06-elevator-orders-served.sql
db/stats-init/: 01-elevator-mileage.sql  02-elevator-orders-served.sql
docs/: CICD.md  CORE.md  PROTOCOL.md  README.md  actor-contract.md  actors.md  apt-repo.md  architecture.md  auth.md  cicd.md  cluster.md  core.md  crash-recovery.md  dev-worktrees.md  dictionary.md  protocol.md  read-model.md  run.md  scheduling.md  suspender.md  versioning.md
elevator--common/: pom.xml
elevator--common/elevator-common-dto/: pom.xml
elevator-api/: Dockerfile  pom.xml
elevator-api/src/main/resources/: application-prod.yml  application-test.yml  application.yml  passengers.properties
elevator-app/: Dockerfile  pom.xml
elevator-app/src/main/resources/: application.conf  logback-profile-prod.xml  logback-profile-test.xml  logback.xml
elevator-bi/: Dockerfile  README.md  pom.xml
elevator-bi/conf/: log4j2.properties
elevator-common/: pom.xml
elevator-common/elevator-common-core/: pom.xml
elevator-common/elevator-common-dto/: pom.xml
elevator-common/elevator-common-events/: pom.xml
elevator-common/elevator-common-logic/: pom.xml
elevator-common/elevator-common-protocol/: pom.xml
elevator-common/elevator-common-serializable/: pom.xml
elevator-common/elevator-common-strategy/: pom.xml
elevator-console/: .dockerignore  Cargo.toml  Dockerfile  Makefile  README.md  install.sh  pom.xml
elevator-console-cli/: Cargo.toml  Dockerfile  Makefile  README.md  build.rs  fleet.example.txt  install.sh  pom.xml
elevator-console-cli/scripts/: apt-repo.sh
elevator-console-cli/src/: api.rs  itest.rs  main.rs  rng.rs  sender.rs  version.rs
elevator-console-cli/src/monitor/: app.rs  k8s.rs  mod.rs  sources.rs  ui.rs  watch.rs
elevator-console-web/: .dockerignore  .gitignore  Dockerfile  README.md  angular.json  elm.json  index.html  nginx.conf  package-lock.json  package.json  pom.xml  vite.config.js
elevator-console-web/scripts/: build.mjs  gen-version.mjs
elevator-console-web/src/: Api.elm  Chart.elm  Filter.elm  Header.elm  History.elm  Log.elm  Main.elm  Ports.elm  Sim.elm  Stats.elm  Trend.elm  Types.elm  index.html  main.js  styles.css
elevator-console-web/src/app/: app.css  app.html  app.ts  chart-options.spec.ts  chart-options.ts  echart.ts  elevator.service.spec.ts  elevator.service.ts  filter.spec.ts  filter.ts  logger.ts  models.ts  shaft.ts  stats.css  stats.html  stats.ts  trend.css  trend.ts
elevator-console-web/tests/: ChartTest.elm  FilterTest.elm  HistoryTest.elm  StatsTest.elm  TrendTest.elm  TypesTest.elm
elevator-console/certs/: elevator-ca.crt
elevator-console/src/: api.rs  itest.rs  main.rs  monitor.rs  sender.rs
elevator-console/src/monitor/: app.rs  git.rs  k8s.rs  mod.rs  selftest.rs  sources.rs  ui.rs  watch.rs
elevator-optimizer/: README.md  run.sh
elevator-optimizer/src/: Dispatch.scala  Domain.scala  Lab.scala  Optimizers.scala  Simulator.scala
elevator-sim/: pom.xml
elevator-web-console/: .dockerignore  Dockerfile  README.md  angular.json  nginx.conf  package-lock.json  package.json  pom.xml
elevator-web-console/src/: styles.css
elevator-web-console/src/app/: app.css  app.html  app.ts  models.ts  shaft.css  shaft.html  shaft.ts  trend.html
k8s/: api.yaml  app.yaml  configmap.yaml  console-web.yaml  kafka.yaml  network-policies.yaml  postgres-init.yaml  postgres-stats-init.yaml  postgres-stats.yaml  postgres.yaml  rbac.yaml  web-console.yaml
k8s/bi/: configmap.yaml  mileage-driver.yaml  network-policies.yaml  orders-served-driver.yaml  rbac.yaml
scripts/: bi-down.sh  bi-logs.sh  bi-up.sh  bi.sh  configmap-switch-e2e.sh  demo-down.sh  demo-up.sh  demo.sh  fleet.example.txt  gen-tls.sh  kind-calico-up.sh  kind-calico.yaml  md-to-pdf.sh  monitor-k8s.sh  monitor-watch.sh  monitor.sh  monitor2.sh  seed-k8s.sh
scripts/hooks/: pre-commit
terraform/: .gitignore  api.tf  app.tf  cluster.tf  configmaps.tf  kafka.tf  outputs.tf  provider.tf  secrets.tf  terraform.tfvars.example  tls.tf  variables.tf  versions.tf
(+248 files in other folders)
