[package]
name = "elevator-console-cli"
version = "0.8.0" # x-release-please-version
edition = "2021"
rust-version = "1.74"
description = "Terminal dashboard and order sender for the elevator system, talking only to the elevator-api HTTP edge"
license = "MIT"
readme = "README.md"
repository = "https://github.com/TwistedLady/elevator-system"
categories = ["command-line-utilities"]
keywords = ["tui", "ratatui", "elevator", "dashboard"]

[[bin]]
name = "elevator-console-cli"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# CLI parsing. Trimmed to the features we use (derive + env). Dropping the default `color`/
# `suggestions` features removes anstream/anstyle/strsim from the build.
clap = { version = "4", default-features = false, features = [
    "std",
    "derive",
    "env",
    "help",
    "usage",
    "error-context",
] }
# Tiny blocking HTTP client. The console's ONLY channel to the system: orders, state (poll + SSE),
# order status, and actuator health all go through the elevator-api over this — over TLS.
ureq = { version = "2", default-features = false, features = ["tls"] }
# Trust the api's self-signed cert. Pure-Rust; pin the `ring` provider so the build needs only a C
# compiler (aws-lc-rs would need cmake, which isn't available here).
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12", "logging"] }
rustls-pemfile = "2"
# Retro multi-view TUI (tabs, boxes, charts). Brings crossterm in via ratatui::crossterm.
ratatui = "0.29"
# Regex log/name filtering. Trimmed: no default perf features (aho-corasick/memchr) — the patterns
# are short and interactive, so the perf tables aren't worth the binary weight.
regex = { version = "1", default-features = false, features = ["std", "unicode-perl", "unicode-case"] }
# localtime_r, to label the trend x-axis with local wall-clock time (no heavy date crate).
libc = "0.2"

# Small, fast-starting release binary: optimise for size, one codegen unit + LTO to inline across
# crates, abort on panic (no unwind tables), and strip symbols. Cuts the binary roughly in half.
[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true

# `cargo deb` metadata — builds a Debian package that installs the binary to /usr/bin.
[package.metadata.deb]
maintainer = "elevator-system"
copyright = "elevator-system contributors"
license-file = ["LICENSE", "0"]
extended-description = "A retro terminal dashboard for the elevator system. Monitors live elevator state and sends orders through the elevator-api HTTP edge."
section = "utils"
priority = "optional"
assets = [
    ["target/release/elevator-console-cli", "usr/bin/", "755"],
]
