[package]
name = "elevator-console"
version = "0.1.0"
edition = "2021"
description = "Terminal app for the elevator system: monitors elevator state (and, later, sends orders)"

[[bin]]
name = "elevator-console"
path = "src/main.rs"

[dependencies]
# Kafka client. Uses the system librdkafka by default (Ubuntu: `apt install librdkafka-dev`).
# No system lib? Build it from source instead: features = ["cmake-build"] (needs cmake + a C compiler).
rdkafka = "0.36"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
