[package]
name = "elevator-console"
version = "0.1.0"
edition = "2021"
description = "Terminal app for the elevator system: monitors elevator state and sends orders via the HTTP API"

[[bin]]
name = "elevator-console"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive", "env"] }
rand = "0.8"
# Tiny blocking HTTP client (no TLS/async). The console's ONLY channel to the system: orders,
# state (poll + SSE), order status, and actuator health all go through the elevator-api over this.
ureq = { version = "2", default-features = false }
# Retro multi-view TUI (tabs, boxes, charts). Brings crossterm in via ratatui::crossterm.
ratatui = "0.29"
# Regex log filtering in the Logs view.
regex = "1"
# localtime_r, to label the trend x-axis with local wall-clock time (no heavy date crate).
libc = "0.2"
